--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "bun run lint:changed -- --fix",
     "lint:inspect": "bunx eslint --inspect-config",
     "precommit": "bun run lint:staged",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "bun test",
+    "test:watch": "bun test --watch"
   },
   "dependencies": {
     "hono": "^4.6.20"
