--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "dev": "bun run --hot src/index.ts",
-    "lint": "eslint",
-    "lint:changed": "eslint --pass-on-no-patterns --no-warn-ignored $(git diff --name-only --diff-filter=d HEAD)",
-    "lint:staged": "eslint --pass-on-no-patterns --no-warn-ignored $(git diff --cached --name-only --diff-filter=d)",
-    "lint:fix": "bun run lint:changed -- --fix",
-    "lint:inspect": "bunx eslint --inspect-config",
-    "precommit": "bun run lint:staged",
+    "lint": "bunx --bun eslint",
+    "lint:changed": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --name-only --diff-filter=d HEAD)",
+    "lint:staged": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --cached --name-only --diff-filter=d)",
+    "lint:fix": "bunx --bun eslint --fix",
+    "lint:inspect": "bunx --bun eslint --inspect-config",
     "test": "bun test",
-    "test:watch": "bun test --watch"
+    "test:watch": "bun test --watch",
+    "precommit": "bun run lint:staged"
   },
   "dependencies": {
     "hono": "^4.7.7"
