--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "eslint-plugin-format": "^1.0.1",
     "jiti": "^2.4.2",
     "simple-git-hooks": "^2.12.1"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "bun precommit"
   }
 }
