--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "precommit": "bun run lint:staged"
   },
   "dependencies": {
+    "drizzle-orm": "^0.44.2",
     "hono": "^4.7.7"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
     "@types/bun": "latest",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
     "eslint-plugin-format": "^1.0.1",
     "jiti": "^2.4.2",
