--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
+    "@libsql/client": "^0.15.9",
     "@types/bun": "latest",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
