--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,14 @@
 .DS_Store
 *.pem
 
-# debug
+# logs and debug
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # local env files
 .env
