--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "dev": "bun run --hot src/index.ts",
+    "db:init": "bunx --bun drizzle-kit generate",
     "db:migrate": "bunx --bun drizzle-kit migrate",
-    "db:generate": "bunx --bun drizzle-kit generate",
     "db:push": "bunx --bun drizzle-kit push",
     "db:pull": "bunx --bun drizzle-kit pull",
     "lint": "bunx --bun eslint",
