--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.44.2",
-    "hono": "^4.8.4"
+    "hono": "^4.8.4",
+    "hono-pino": "^0.9.1",
+    "pino": "^9.7.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.2",
