--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 LOG_LEVEL=
 
 SQLITE_DB_PATH=data.sqlite3
+
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=http://localhost:3000
+TRUSTED_ORIGINS=http://localhost:5173,http://localhost:3000
