feat: implement email and password authentication
- Schema import is required for drizzleAdapter
- Refactor environment variables
- Adjust auth.ts to utilize new BASE_URL and TRUSTED_ORIGINS
- Add session middleware to handle user session verification
- Modify routing to include auth handler and update imports
- Add comment on email verification logic for further implementation
- Create a placeholder for mailer implementation

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 # https://getpino.io/#/docs/api?id=level-string
 LOG_LEVEL=
 
-SQLITE_DB_PATH=data.sqlite3
-
-BETTER_AUTH_SECRET=
-BETTER_AUTH_URL=http://localhost:3000
-TRUSTED_ORIGINS=http://localhost:5173,http://localhost:3000
+BASE_URL=http://localhost:3000
+TRUSTED_ORIGINS=http://localhost:3000
+AUTH_SECRET=
+SQLITE_DB_PATH=
