feat: add drizzle-cuid2

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "precommit": "bun run lint:staged"
   },
   "dependencies": {
+    "drizzle-cuid2": "^2.1.0",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.8.4",
     "hono-pino": "^0.9.1",
