refactor: restructure and move source code under templates directory

--- a/templates/starter/.gitignore
+++ b/templates/starter/.gitignore
@@ -50,5 +50,8 @@ lerna-debug.log*
 package-lock.json
 **/*.bun
 
-# we dont keep template's lock file
-templates/*/bun.lock
+# uploaded files directory
+upload
+
+# sqlite
+*.db
