--- a/templates/starter/package.json
+++ b/templates/starter/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "bun-hono-templates",
-  "author": {
-    "name": "Achmad F. Ibrahim",
-    "email": "acfatah@gmail.com"
-  },
-  "workspaces": [
-    "templates/*"
-  ],
+  "name": "bun-hono-rest-api",
   "scripts": {
+    "start": "bun run src/index.ts",
+    "dev": "bun run --hot src/index.ts",
     "lint": "bunx --bun eslint",
     "lint:changed": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --name-only --diff-filter=d HEAD)",
     "lint:staged": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --cached --name-only --diff-filter=d)",
     "lint:fix": "bunx --bun eslint --fix",
     "lint:fix-staged": "bunx --bun eslint --fix --pass-on-no-patterns --no-warn-ignored $(git diff --cached --name-only --diff-filter=d)",
     "lint:inspect": "bunx --bun eslint --inspect-config",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
     "precommit": "bun run lint:staged"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.44.2",
+    "hono": "^4.8.4",
+    "hono-pino": "^0.9.1",
+    "pino": "^9.7.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.2",
@@ -22,6 +25,7 @@
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
     "jiti": "^2.4.2",
+    "pino-pretty": "^13.0.0",
     "simple-git-hooks": "^2.13.0"
   },
   "simple-git-hooks": {
