--- a/templates/drizzle-sqlite/.gitignore
+++ b/templates/drizzle-sqlite/.gitignore
@@ -22,7 +22,7 @@
 *.pem
 
 # logs and debug
-logs
+/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -51,7 +51,7 @@ package-lock.json
 **/*.bun
 
 # uploaded files directory
-upload
+/upload
 
 # sqlite
 *.db
