feat: implement environment configuration and update logger to use env variables

--- a/templates/drizzle-sqlite/.env.example
+++ b/templates/drizzle-sqlite/.env.example
@@ -1,4 +1,6 @@
 # https://getpino.io/#/docs/api?id=level-string
 LOG_LEVEL=
 
+BASE_URL=http://localhost:3000
+TRUSTED_ORIGINS=http://localhost:3000
 SQLITE_DB_PATH=data.sqlite3
