--- a/templates/starter/.env.example
+++ b/templates/starter/.env.example
@@ -1,2 +1,5 @@
 # https://getpino.io/#/docs/api?id=level-string
 LOG_LEVEL=
+
+BASE_URL=http://localhost:3000
+TRUSTED_ORIGINS=http://localhost:3000
