--- a/templates/better-auth/package.json
+++ b/templates/better-auth/package.json
@@ -31,7 +31,8 @@
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.7",
     "hono-pino": "^0.9.1",
-    "pino": "^9.10.0"
+    "pino": "^9.10.0",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.19.0",
