--- a/templates/drizzle-sqlite/package.json
+++ b/templates/drizzle-sqlite/package.json
@@ -30,7 +30,8 @@
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.7",
     "hono-pino": "^0.9.1",
-    "pino": "^9.9.5"
+    "pino": "^9.9.5",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.19.0",
