--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bun-hono-templates",
+  "name": "bun-hono",
   "author": {
     "name": "Achmad F. Ibrahim",
     "email": "acfatah@gmail.com"
@@ -10,11 +10,14 @@
   "scripts": {
     "update:all": "bun scripts/update-all.ts",
     "lint": "bunx --bun eslint",
-    "lint:changed": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --relative --name-only --diff-filter=d HEAD)",
+    "lint:changed": "{ git diff --name-only -z --diff-filter=d --relative HEAD; git ls-files -z --others --exclude-standard -- ':./'; } | xargs -0 -r bunx --bun eslint --pass-on-no-patterns --no-warn-ignored",
     "lint:staged": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --relative --cached --name-only --diff-filter=d)",
-    "lint:fix": "bunx --bun eslint --fix",
-    "lint:fix-staged": "bunx --bun eslint --fix --pass-on-no-patterns --no-warn-ignored $(git diff --relative --cached --name-only --diff-filter=d)",
     "lint:inspect": "bunx --bun eslint --inspect-config",
+    "format": "bunx --bun eslint --fix",
+    "format:changed": "{ git diff --name-only -z --diff-filter=d --relative HEAD; git ls-files -z --others --exclude-standard -- ':./'; } | xargs -0 -r bunx --bun eslint --fix --no-warn-ignored",
+    "format:staged": "staged_files=$(git diff --relative --cached --name-only --diff-filter=d); bunx --bun eslint --fix --pass-on-no-patterns --no-warn-ignored $staged_files && git add $staged_files",
+    "typecheck": "bun scripts/typecheck-all.ts",
+    "typecheck:tsgo": "bun scripts/typecheck-all.ts --tsgo",
     "precommit": "bun run lint:staged"
   },
   "devDependencies": {
