feat(env): add logging configuration and environment variables for production and testing

--- a/templates/drizzle-sqlite/.env.example
+++ b/templates/drizzle-sqlite/.env.example
@@ -1,6 +1,10 @@
 # https://getpino.io/#/docs/api?id=level-string
-LOG_LEVEL=
+LOG_LEVEL=info
 
 BASE_URL=http://localhost:3000
 TRUSTED_ORIGINS=http://localhost:3000
-SQLITE_DB_PATH=data.sqlite3
+PRODUCTION_LOG_FILE=production.log
+TEST_LOG_FILE=test.log
+
+# Path to SQLite database file
+SQLITE_DB_PATH=
