--- a/templates/better-auth/.env.example
+++ b/templates/better-auth/.env.example
@@ -1,7 +1,13 @@
 # https://getpino.io/#/docs/api?id=level-string
-LOG_LEVEL=
+LOG_LEVEL=info
 
 BASE_URL=http://localhost:3000
 TRUSTED_ORIGINS=http://localhost:3000
-AUTH_SECRET=
+PRODUCTION_LOG_FILE=production.log
+TEST_LOG_FILE=test.log
+
+# Path to SQLite database file
 SQLITE_DB_PATH=
+
+# Secret for better-auth. Can be replaced with BETTER_AUTH_SECRET.
+AUTH_SECRET=
