--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "precommit": "bun run lint:staged"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.19.0",
-    "@types/bun": "latest",
+    "@antfu/eslint-config": "^5.4.1",
+    "@types/bun": "^1.2.22",
     "@types/common-tags": "^1.8.4",
     "common-tags": "^1.8.2",
-    "eslint": "^9.33.0",
-    "eslint-plugin-format": "^1.0.1",
-    "jiti": "^2.5.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-format": "^1.0.2",
+    "jiti": "^2.6.0",
     "simple-git-hooks": "^2.13.1"
   },
   "simple-git-hooks": {
