--- a/templates/better-auth/package.json
+++ b/templates/better-auth/package.json
@@ -28,22 +28,22 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "better-auth": "^1.3.11",
+    "better-auth": "^1.3.17",
     "drizzle-cuid2": "^2.1.0",
     "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.7",
-    "hono-pino": "^0.9.1",
-    "pino": "^9.10.0",
-    "zod": "^4.1.9"
+    "hono": "^4.9.8",
+    "hono-pino": "^0.10.2",
+    "pino": "^9.11.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.19.0",
+    "@antfu/eslint-config": "^5.4.1",
     "@libsql/client": "^0.15.15",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.22",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^9.35.0",
-    "eslint-plugin-format": "^1.0.1",
-    "jiti": "^2.5.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-format": "^1.0.2",
+    "jiti": "^2.6.0",
     "pino-pretty": "^13.1.1",
     "simple-git-hooks": "^2.13.1"
   },
