--- a/templates/drizzle-sqlite/package.json
+++ b/templates/drizzle-sqlite/package.json
@@ -28,19 +28,19 @@
   "dependencies": {
     "drizzle-cuid2": "^2.1.0",
     "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.7",
-    "hono-pino": "^0.9.1",
-    "pino": "^9.9.5",
-    "zod": "^4.1.9"
+    "hono": "^4.9.8",
+    "hono-pino": "^0.10.2",
+    "pino": "^9.11.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.19.0",
+    "@antfu/eslint-config": "^5.4.1",
     "@libsql/client": "^0.15.15",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.22",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^9.35.0",
-    "eslint-plugin-format": "^1.0.1",
-    "jiti": "^2.5.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-format": "^1.0.2",
+    "jiti": "^2.6.0",
     "pino-pretty": "^13.1.1",
     "simple-git-hooks": "^2.13.1"
   },
