--- a/templates/starter/package.json
+++ b/templates/starter/package.json
@@ -19,17 +19,17 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.7",
+    "hono": "^4.9.8",
     "hono-pino": "^0.10.2",
-    "pino": "^9.9.5",
-    "zod": "^4.1.9"
+    "pino": "^9.11.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.19.0",
-    "@types/bun": "latest",
-    "eslint": "^9.35.0",
-    "eslint-plugin-format": "^1.0.1",
-    "jiti": "^2.5.1",
+    "@antfu/eslint-config": "^5.4.1",
+    "@types/bun": "^1.2.22",
+    "eslint": "^9.36.0",
+    "eslint-plugin-format": "^1.0.2",
+    "jiti": "^2.6.0",
     "pino-pretty": "^13.1.1",
     "simple-git-hooks": "^2.13.1"
   },
