--- a/templates/drizzle-sqlite/.env.example
+++ b/templates/drizzle-sqlite/.env.example
@@ -1,10 +1,15 @@
 # https://getpino.io/#/docs/api?id=level-string
 LOG_LEVEL=info
 
+APP_SECRET=
 BASE_URL=http://localhost:3000
 TRUSTED_ORIGINS=http://localhost:3000
 PRODUCTION_LOG_FILE=production.log
 TEST_LOG_FILE=test.log
+
+# Session settings
+SESSION_COOKIE_NAME=
+SESSION_TTL=
 
 # Path to SQLite database file
 SQLITE_DB_PATH=
