--- a/templates/drizzle-sqlite/package.json
+++ b/templates/drizzle-sqlite/package.json
@@ -30,6 +30,7 @@
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.8",
     "hono-pino": "^0.10.2",
+    "iron-session": "^8.0.4",
     "pino": "^9.11.0",
     "zod": "^4.1.11"
   },
