feat: implement JWT middleware and provider; add tests for token signing and verification

--- a/templates/drizzle-sqlite/package.json
+++ b/templates/drizzle-sqlite/package.json
@@ -31,6 +31,7 @@
     "hono": "^4.9.8",
     "hono-pino": "^0.10.2",
     "iron-session": "^8.0.4",
+    "jose": "^6.1.0",
     "pino": "^9.11.0",
     "zod": "^4.1.11"
   },
