--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
 
   // To use tsgo, install it as peer dependency, `bun add --peer @typescript/native-preview`.
   // See: https://github.com/microsoft/typescript-go
-  "typescript.experimental.useTsgo": false
+  "typescript.experimental.useTsgo": true
 }
