feat: add SMTP mailer configuration and implementation
- Added SMTP configuration options to .env.example files across multiple templates.
- Updated env.ts files to include SMTP settings with validation using Zod.
- Implemented mailer functionality in mailer.ts files, utilizing nodemailer for sending emails.
- Added health check utility for the mailer to verify SMTP connection.
- Included nodemailer as a dependency in package.json for relevant templates.

--- a/templates/better-auth/.env.example
+++ b/templates/better-auth/.env.example
@@ -11,3 +11,12 @@ SQLITE_DB_PATH=
 
 # Secret for better-auth. Can be replaced with BETTER_AUTH_SECRET.
 AUTH_SECRET=
+
+# SMTP configuration
+ENABLE_SMTP_MAILER=false
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+SMTP_FROM="Example App <no-reply@example.com>"
