--- a/templates/_/.env.example
+++ b/templates/_/.env.example
@@ -5,3 +5,12 @@ BASE_URL=http://localhost:3000
 TRUSTED_ORIGINS=http://localhost:3000
 PRODUCTION_LOG_FILE=production.log
 TEST_LOG_FILE=test.log
+
+# SMTP configuration
+ENABLE_SMTP_MAILER=false
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+SMTP_FROM="Example App <no-reply@example.com>"
