--- a/templates/better-auth/package.json
+++ b/templates/better-auth/package.json
@@ -33,6 +33,7 @@
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.8",
     "hono-pino": "^0.10.2",
+    "nodemailer": "^7.0.6",
     "pino": "^9.11.0",
     "zod": "^4.1.11"
   },
