--- a/templates/drizzle-sqlite/.env.example
+++ b/templates/drizzle-sqlite/.env.example
@@ -13,3 +13,12 @@ SESSION_TTL=
 
 # Path to SQLite database file
 SQLITE_DB_PATH=
+
+# SMTP configuration
+ENABLE_SMTP_MAILER=false
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+SMTP_FROM="Example App <no-reply@example.com>"
