--- a/templates/drizzle-sqlite/package.json
+++ b/templates/drizzle-sqlite/package.json
@@ -32,6 +32,7 @@
     "hono-pino": "^0.10.2",
     "iron-session": "^8.0.4",
     "jose": "^6.1.0",
+    "nodemailer": "^7.0.6",
     "pino": "^9.11.0",
     "zod": "^4.1.11"
   },
