--- a/templates/starter/package.json
+++ b/templates/starter/package.json
@@ -21,12 +21,14 @@
     "drizzle-orm": "^0.44.5",
     "hono": "^4.9.8",
     "hono-pino": "^0.10.2",
+    "nodemailer": "^7.0.6",
     "pino": "^9.11.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
     "@types/bun": "^1.2.22",
+    "@types/nodemailer": "^6.4.15",
     "eslint": "^9.36.0",
     "eslint-plugin-format": "^1.0.2",
     "jiti": "^2.6.0",
