--- a/templates/starter/.env.example
+++ b/templates/starter/.env.example
@@ -6,6 +6,9 @@ TRUSTED_ORIGINS=http://localhost:3000
 PRODUCTION_LOG_FILE=production.log
 TEST_LOG_FILE=test.log
 
+# Path to SQLite database file
+SQLITE_DB_PATH=
+
 # SMTP configuration
 ENABLE_SMTP_MAILER=false
 SMTP_HOST=localhost
