--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
-    "@types/bun": "^1.2.22",
+    "@types/bun": "^1.3.0",
     "@types/common-tags": "^1.8.4",
     "common-tags": "^1.8.2",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-format": "^1.0.2",
-    "jiti": "^2.6.0",
+    "jiti": "^2.6.1",
+    "pathe": "^2.0.3",
     "simple-git-hooks": "^2.13.1"
   },
   "simple-git-hooks": {
