--- a/templates/drizzle-sqlite/package.json
+++ b/templates/drizzle-sqlite/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-cuid2": "^2.1.0",
     "drizzle-orm": "^0.44.6",
     "hono": "^4.9.10",
@@ -40,6 +41,7 @@
     "@antfu/eslint-config": "^5.4.1",
     "@libsql/client": "^0.15.15",
     "@types/bun": "^1.3.0",
+    "@types/nodemailer": "^7.0.2",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9.37.0",
     "eslint-plugin-format": "^1.0.2",
