feat: add dedicated linting script

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "update:all": "bun scripts/update-all.ts",
     "copy-common-to-templates": "bun scripts/copy-common-to-templates.ts",
     "lint": "bun scripts/lint-all.ts",
+    "lint:changed": "bun scripts/lint-all.ts --changed",
     "lint:staged": "bun scripts/lint-all.ts --staged",
-    "format": "bunx --bun eslint --fix",
-    "format:changed": "{ git diff --name-only -z --diff-filter=d --relative HEAD; git ls-files -z --others --exclude-standard -- ':./'; } | xargs -0 -r bunx --bun eslint --fix --no-warn-ignored",
-    "format:staged": "staged_files=$(git diff --relative --cached --name-only --diff-filter=d); bunx --bun eslint --fix --pass-on-no-patterns --no-warn-ignored $staged_files && git add $staged_files",
+    "format": "bun scripts/lint-all.ts --fix",
+    "format:changed": "bun scripts/lint-all.ts --fix --changed",
+    "format:staged": "bun scripts/lint-all.ts --fix --staged",
     "typecheck": "bun scripts/typecheck-all.ts",
     "typecheck:tsgo": "bun scripts/typecheck-all.ts --tsgo",
     "precommit": "bun run lint:staged"
