--- a/templates/starter/package.json
+++ b/templates/starter/package.json
@@ -4,10 +4,11 @@
     "start": "bun run src/index.ts",
     "dev": "bun run --hot src/index.ts",
     "lint": "bunx --bun eslint",
-    "lint:changed": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --relative --name-only --diff-filter=d HEAD)",
+    "lint:changed": "{ git diff --name-only -z --diff-filter=d --relative HEAD; git ls-files -z --others --exclude-standard -- ':./'; } | xargs -0 -r bunx --bun eslint --pass-on-no-patterns --no-warn-ignored",
     "lint:staged": "bunx --bun eslint --pass-on-no-patterns --no-warn-ignored $(git diff --relative --cached --name-only --diff-filter=d)",
     "lint:inspect": "bunx --bun eslint --inspect-config",
     "format": "changed_files=$(git diff --relative --name-only --diff-filter=d HEAD); bunx --bun eslint --fix --no-warn-ignored $changed_files",
+    "format:changed": "{ git diff --name-only -z --diff-filter=d --relative HEAD; git ls-files -z --others --exclude-standard -- ':./'; } | xargs -0 -r bunx --bun eslint --fix --no-warn-ignored",
     "format:staged": "staged_files=$(git diff --relative --cached --name-only --diff-filter=d); bunx --bun eslint --fix --pass-on-no-patterns --no-warn-ignored $staged_files && git add $staged_files",
     "typecheck": "tsc --noEmit",
     "test": "bun test",
